# llm-agent

./: .env  Dockerfile  llm-agent-ui.html  pyproject.toml
app/: main.py
app/agent/: graph.py  state.py  utils.py
app/agent/nodes/: code.py  dev_qa.py  infra.py  router.py
app/agent/prompts/: templates.py
app/api/routes/: chat.py  invoke.py
app/core/: config.py  llm.py
app/schemas/: chat.py
llm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
