[project]
name = "llm-agent"
version = "0.1.0"
description = "내부망 LLM Agent - FastAPI + LangGraph + Ollama"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "langgraph>=1.0.9",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "sse-starlette>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
serve = "app.main:start"   # uv run serve 로 서버 실행

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
